add table for home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,8 @@
 <h1>weather data api</h1>
 <p>URL format: http://127.0.0.1:5000/api/v1/station/date </p>
 <p>URL example: http://127.0.0.1:5000/api/v1/10/1998-10-25 </p>
-
+<p>see below to find station codes:</p>
+<p>{{data|safe}}</p>
 </body>
 
 </html>
